<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen 
          xmlns:android="http://schemas.android.com/apk/res/android" 
          android:title="@string/set_alarm"
          android:widgetLayout="@layout/customlistview">
    <Preference android:key="time" android:persistent="false" android:title="@string/time"/>
    <com.icrg.waterfall.alarm.AlarmPreference android:key="alarm" android:title="@string/alert" android:ringtoneType="alarm" android:persistent="false" android:showDefault="false" android:showSilent="true"/>
    <CheckBoxPreference android:key="vibrate" android:persistent="false" android:title="@string/alarm_vibrate"/>
    <com.icrg.waterfall.alarm.RepeatPreference android:persistent="false" android:key="setRepeat" android:title="@string/alarm_repeat"/>
    
    </PreferenceScreen>